@@ -753,6 +753,7 @@ about.text=jEdit is brought to you by:\n\
 	Francesc Roses\n\
 	George Latkiewicz\n\
 	Gili Tzabari\n\
+	Giulio Piancastelli\n\
 	Greg Merrill\n\
 	Ian Maclean\n\
 	Jamie LaScolea\n\
